@@ -1,9 +1,9 @@
 for _, prototype in pairs({ "space-location", "planet" }) do
 	for _, loc in pairs(data.raw[prototype]) do
 		if loc.subgroup and loc.subgroup == "satellites" then
-			loc.redrawn_connections_keep = true
+			loc.redrawn_connections_exclude = true
 		elseif loc.hidden then
-			loc.redrawn_connections_keep = true
+			loc.redrawn_connections_exclude = true
 		end
 	end
 end
@@ -15,8 +15,9 @@ for _, connection in pairs(data.raw["space-connection"]) do
 end
 
 -- == Vanilla ==--
+
 if data.raw["space-location"]["shattered-planet"] then
-	data.raw["space-location"]["shattered-planet"].redrawn_connections_keep = true
+	data.raw["space-location"]["shattered-planet"].redrawn_connections_exclude = true
 end
 if data.raw["space-location"]["solar-system-edge"] then
 	data.raw["space-location"]["solar-system-edge"].redrawn_connections_length_multiplier = 4.8
@@ -28,5 +29,5 @@ end
 -- == Maraxsis ==--
 
 if data.raw.planet["maraxsis-trench"] then
-	data.raw.planet["maraxsis-trench"].redrawn_connections_keep = true
+	data.raw.planet["maraxsis-trench"].redrawn_connections_exclude = true
 end
